--- a/config.yml
+++ b/config.yml
@@ -74,7 +74,9 @@ params:
     - name: Empty Category
     - name: Uncategorized
       untitled: true
-  description: We continuously monitor the status of our services and if there are
-    any interruptions, a note will be posted here.
+  description: API OCA stands for "Application Programming Interface." It is a set
+    of rules and protocols that allows different software applications to
+    communicate with each other. APIs define the methods and data formats that
+    applications can use to request and exchange information.
   enableCustomHTML: true
   useLargeHeaderDesign: true
