--- a/config.yml
+++ b/config.yml
@@ -55,7 +55,7 @@ params:
   dateFormat: January 2, 2006 at 3:04 PM UTC
   brand: "#e9ecef"
   enableLastMod: true
-  headerTextColor: white
+  headerTextColor: black
   logo: /img/oca.png
   incidentPostsPerPage: 10
   googleAnalytics: UA-00000000-1
@@ -72,8 +72,6 @@ params:
       description: The main servers are located here.
       closed: true
     - name: Empty Category
-    - name: Uncategorized
-      untitled: true
   description: API OCA stands for "Application Programming Interface." It is a set
     of rules and protocols that allows different software applications to
     communicate with each other. APIs define the methods and data formats that
