--- a/config.yml
+++ b/config.yml
@@ -72,6 +72,8 @@ params:
       description: The main servers are located here.
       closed: true
     - name: Empty Category
+      untitled: true
+      closed: true
   description: API OCA stands for "Application Programming Interface." It is a set
     of rules and protocols that allows different software applications to
     communicate with each other. APIs define the methods and data formats that
